--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "dev": "tsc && nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts"
   },
   "author": "minhduc152001",
   "license": "ISC",
