--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,8 @@
   "author": "minhduc152001",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/morgan": "^1.9.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -19,8 +21,10 @@
     "@types/node": "^18.13.0",
     "apollo-server-core": "^3.11.1",
     "apollo-server-express": "^3.11.1",
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "graphql": "^16.6.0",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.1",
     "morgan": "^1.10.0",
     "ts-node": "^10.9.1",
