--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -101,5 +101,5 @@
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
   "exclude": ["node_modules"],
-  "include": ["./src/**/*.ts"]
+  "include": ["./src/**/*.ts", "src/database/models/mockTest.model.ts"]
 }
