--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.1",
     "morgan": "^1.10.0",
+    "slugify": "^1.6.6",
     "stripe": "^11.17.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
